--- a/wp-content/plugins/are-you-paying-attention/package.json
+++ b/wp-content/plugins/are-you-paying-attention/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@wordpress/scripts": "^15.0.1"
+  },
+  "dependencies": {
+    "react-color": "^2.19.3"
   }
 }
